<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsg_query</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joaolucasmbcadorniga@gmail.com">joaolucasmbc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hydra_msgs</depend>
  <depend>spark_dsg</depend>
  <depend>pose_graph_tools_msgs</depend>
  <depend>kimera_pgmo_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>assimp</build_depend>
  <exec_depend>assimp</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
